--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,9 +5,9 @@ YafaRay v3.1.1-beta (2016-09-25) for Blender 2.78:
 
 Bug fixes in v3.1.1:
 --------------------
-* IMPORTANT: Fixed Volumetrics regression bug introduced in v3.1.0 (artifacts in the images and crashes). This time it should work fine while also solving the original Volumetric bug that v3.1.0 tried to fix.
+* IMPORTANT: Fixed Volumetrics regression bug introduced in v3.1.0 (artifacts in the images and crashes). This time it should work fine while also solving the original Volumetric bug that v3.1.0 tried to fix. `[Core]`
 
-* Fixed incorrect Glass IOR presets retrieval in Blender Exporter
+* Fixed incorrect Glass IOR presets retrieval in Blender Exporter. `[Blender Exporter]`
 
 
 
@@ -16,13 +16,13 @@ YafaRay v3.1.0-beta (2016-09-20) for Blender 2.78:
 
 Feature changes/additions in v3.1.0:
 ------------------------------------
-* New per-material Sampling Factor. New parameter to resample background or not.
+* New per-material Sampling Factor. New parameter to resample background or not. `[Blender Exporter + Core]`
 These new parameters will *not* work in the first pass, only in the second and subsequent AA passes.
 
     * Option to resample background, as requested at http://www.yafaray.org/node/214. Works in all integrators except SPPM
     * Option to specify a per-material sampling factor to do additional sampling in certain materials, as requested at http://www.yafaray.org/node/746. Works in all integrators except SPPM
 
-* New WireFrame material properties as well as a WireFrame render pass, as requested in: http://yafaray.org/node/198
+* New WireFrame material properties as well as a WireFrame render pass, as requested in: http://yafaray.org/node/198 `[Blender Exporter + Core]`
 
   Now, all materials (including Blend material) will have a new Wireframe shading panel. The wireframe can be used in two different ways, depending on whether we want it to be part of the final rendered image or if we want it in a separate Render Pass:
        * Embedded in the Render itself: set a wireframe amount (and optionally map the wireframe amount to a texture). Set the other wireframe options such as color, thickness and softness, and render the scene.
@@ -33,7 +33,7 @@ These new parameters will *not* work in the first pass, only in the second and s
        * All Quads and Polygons will be always seen as Triangles (with the crossed line). This is, unfortunately, somthing I cannot solve. YafaRay is currently based on triangle meshes and all Quads and Polygons are first converted to triangle meshes in the Blender Exporter, before entering YafaRay. So, in the Wireframe you will always see triangles, never quads, etc.
        * In the Blend material, the Wireframe shading cannot be mapped to a texture
 
-* New Render Passes: Basic Toon effect, Object Edges and Faces Edges. See: http://www.yafaray.org/community/forum/viewtopic.php?f=23&t=5181
+* New Render Passes: Basic Toon effect, Object Edges and Faces Edges. See: http://www.yafaray.org/community/forum/viewtopic.php?f=23&t=5181 `[Blender Exporter + Core]`
       "Wireframe" material options and render pass will be calculated at "material" integration level. It should be more finely detailed but will only show triangles (quads will show the "crossing" line).
 
       "Faces edges" will be a render pass calculated at Film level showing the edge contours. In this case, quads will be shown more correctly. However, to calculate the faces edges with the current architecture I had to use indirect methods that are way less precise, so some artifacts and missing or incomplete edges are to be expected, including aliasing in the edges. I've added some parameters that can be accessed in the Render Passes tab for users to fine tune the edges generation as much as possible.
@@ -44,9 +44,9 @@ These new parameters will *not* work in the first pass, only in the second and s
 
 
 * Render Badge: ability to select Font ttf file and a font size factor. This will allow better presen
-tation and to select fonts with better Unicode support on demand
+tation and to select fonts with better Unicode support on demand. `[Blender Exporter + Core]`
 
-New Automatic "absolute/numeric" Object/Material Index render passes, as requested in http://www.yafaray.org/node/745
+New Automatic "absolute/numeric" Object/Material Index render passes, as requested in http://www.yafaray.org/node/745 `[Blender Exporter + Core]`
 
 
 Bug fixes in v3.1.0:
@@ -54,23 +54,23 @@ Bug fixes in v3.1.0:
 * IMPORTANT: The v3.1.0 Linux builds that can be downloaded in yafaray.org should now be free from the issues "file too short" that happened in the v3.0.2 builds, as described in http://www.yafaray.org/node/759
 
 * IMPORTANT: Fixed (hopefully) the memory allocation bug in Blend materials described at http://www.yafaray.org/
-node/763 that caused either crashes or incorrect render results
+node/763 that caused either crashes or incorrect render results. `[Core]`
 
-* Glass material: more realistic, corrected total reflection including the reflection color/texture. In some scenes this could change the results of Glass rendering!  See http://www.yafaray.org/node/770
+* Glass material: more realistic, corrected total reflection including the reflection color/texture. In some scenes this could change the results of Glass rendering!  See http://www.yafaray.org/node/770 `[Core]`
 
-* Volumes: fixed issue with white/black areas (negative values, etc) in certain circumstances. See: http://www.yafaray.org/node/766
+* Volumes: fixed issue with white/black areas (negative values, etc) in certain circumstances. See: http://www.yafaray.org/node/766 `[Core]`
 
-* Object/Material Absolute Index passes: avoid antialiasing in the edges.
+* Object/Material Absolute Index passes: avoid antialiasing in the edges. `[Core]`
     As requested in http://www.yafaray.org/community/forum/viewtopic.php?f=23&t=5180
     Any "Intermediate" values will be "rounded up" (ceiled). This is one of the many possible criteria to do this, but it gives similar results to Blender Internal, so I will use it.
 
-* Image output denoise: denoise parameters added to the XMLinterface, they didn't work in the XML interface in v3.0.2
+* Image output denoise: denoise parameters added to the XMLinterface, they didn't work in the XML interface in v3.0.2 `[Core]`
 
-* Fixed colorA_t class initialization inconsistencies. We need to keep an eye on this, could cause changes in the Alpha in some scenes (hopefully not)
+* Fixed colorA_t class initialization inconsistencies. We need to keep an eye on this, could cause changes in the Alpha in some scenes (hopefully not) `[Core]`
 
-* Fix problems when rendering a scene that was not yet saved to a .blend file. Now, if the scene has not yet been saved, the secondary output, preset and logs will be saved to a temporary subfolder in the system temporary directory
+* Fix problems when rendering a scene that was not yet saved to a .blend file. Now, if the scene has not yet been saved, the secondary output, preset and logs will be saved to a temporary subfolder in the system temporary directory `[Blender Exporter]`
 
-* Removed additional ray depth from Blend material UI. This setting is not used at all in the Blend material, because Core just calculates the maximum additional ray depth between the component materials automatically. So, I'm removing this to avoid confusing users.
+* Removed additional ray depth from Blend material UI. This setting is not used at all in the Blend material, because Core just calculates the maximum additional ray depth between the component materials automatically. So, I'm removing this to avoid confusing users. `[Blender Exporter]`
 
 
 
