--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,6 +7,19 @@ This is an abbreviated list of changes. The full/detailed list of changes can be
 * Blender Exporter: https://github.com/YafaRay/Blender-Exporter/commits/master
 
 
+YafaRay development version (work in progress, not yet released)
+----------------------------------------------------------------
+
+Feature changes/additions:
+--------------------------
+* None yet
+
+Bug fixes:
+----------
+* Bidirectional: fixed transparent background not working, was causing the entire render to have transparent alpha. See: http://www.yafaray.org/community/forum/viewtopic.php?f=15&t=5236  `[Core]`
+
+
+
 YafaRay v3.2.0 (2017-03-21) for Blender 2.78c:
 ----------------------------------------------
 
