--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,6 +7,19 @@ This is an abbreviated list of changes. The full/detailed list of changes can be
 * Blender Exporter: https://github.com/YafaRay/Blender-Exporter/commits/master
 
 
+YafaRay (development v3.x.x, work in progress)
+----------------------------------------------
+Feature changes/additions:
+--------------------------
+* Basic support for Image Sequences. `[Blender Exporter]`
+* New per-material transparency bias for Shiny Diffuse. When there are objects with many transparent surfaces stacked close together (such as leaves in a tree) sometimes black artifacts appear if the ray reaches the maximum depth. This can be solved by increasing the maximum ray depth, but the render times increase. I've added two new parameters for the Shiny Diffuse material to try to achieve a "trick", which is not realistic and may cause other artifacts but that should prevent the black areas without having to increase the maximum ray depth so much. `[Blender Exporter + Core]`
+
+Bug fixes:
+----------
+* VERY IMPORTANT: Fixed the infamous bug "DAG zero... not allowed to happen!" that caused all objects in Blender to be deleted. I want to thank the user "pouar" for finding the problem and the solution for this! :-) More information: http://www.yafaray.org/node/819#comment-1921
+* Minor fix for a warning "rna_uiItemR: property not found: Camera.show_title_safe" that happened sometimes.
+
+
 YafaRay v3.3.0 (2017-08-22)
 ---------------------------
 
