--- a/CHANGELOG
+++ b/CHANGELOG
@@ -17,6 +17,7 @@ Feature changes/additions:
 Bug fixes:
 ----------
 * VERY IMPORTANT: Fixed the infamous bug "DAG zero... not allowed to happen!" that caused all objects in Blender to be deleted. I want to thank the user "pouar" for finding the problem and the solution for this! :-) More information: http://www.yafaray.org/node/819#comment-1921
+* Fixed Multiview rendering, that had been broken due to a Blender 2.79 API change
 * Minor fix for a warning "rna_uiItemR: property not found: Camera.show_title_safe" that happened sometimes.
 
 
