Make note that this only works in Blender 2.7x. Focus Releases/BugTracker in GitHub

--- a/INSTALL
+++ b/INSTALL
@@ -1,4 +1,4 @@
-To install YafaRay v3 into Blender:
+To install YafaRay v3 into Blender v2.7x:
 
 ** IMPORTANT **
 ----------------------------------------------
