--- a/README
+++ b/README
@@ -6,7 +6,38 @@ Make sure that YafaRay is correctly installed in the appropiate place. See file 
 
 For more information, see: http://www.yafaray.org
 
-IMPORTANT: current LIMITATIONS of YafaRay:
+
+SOURCE CODE
+-----------
+YafaRay source code is hosted in GitHub.
+
+* YafaRay Core source code is available in: https://github.com/YafaRay/Core
+* YafaRay Blender-Exporter (for Blender v2.7x) source code is available in: https://github.com/YafaRay/Blender-Exporter
+
+
+RELEASES
+--------
+There are two different types of YafaRay Releases:
+
+* Releases for Blender: they include the Blender-Exporter code and the YafaRay Core files, in a package ready to be installed in Blender.
+* Standalone Core Releases: they are intended to be used by 3rd party software and *not* to be used with Blender. 
+
+For the latest YafaRay Releases check for builds here:
+* YafaRay Core: releases/binary files available in https://github.com/YafaRay/Core/releases
+* YafaRay Blender-Exporter (for Blender v2.7x): releases/binary files available in https://github.com/YafaRay/Blender-Exporter/releases
+
+
+BUG REPORTS / FEATURE REQUESTS
+------------------------------
+Please post your bug reports and feature requests in the "Issues" tab of the corresponding GitHub Project
+
+NOTE: The old bugtracker in www.yafaray.org will *no longer* be used for bug tracking / feature requests.
+
+
+CURRENT LIMITATIONS
+-------------------
+* This Blender Exporter only works with Blender v2.7x
+
 * YafaRay only supports *one* scene in the .blend file. If you have more than one scene, it could cause unexpected results and problems in the new Material Preview Controls.
 
 * YafaRay v3 has only limited support for multiple YafaRay versions and forks installed at the same time
@@ -20,27 +51,5 @@ Having several versions could cause in some cases:
 
 If you have any of these problems, remove any other yafaray folders (or derived forks) from the Blender addons folder and try again. This typically solves most of the problems stated above.
 
-
-Please post bugreports and feature requests here:
-http://www.yafaray.org/development/bugtracker/yafaray
-
-
-RELEASES
---------
-For the official YafaRay latest exporter updates check:
-
-https://github.com/YafaRay/Blender-Exporter
-
-and for the latest Yafaray builds (including exporter files too) 
-check for builds here:
-
-* http://www.yafaray.org/download
-* http://www.graphicall.org/yafaray
-
-or look into this forum post for other platform builds:
-http://www.yafaray.org/community/forum/viewforum.php?f=12
-
-Please post bugreports and feature requests here:
-http://www.yafaray.org/development/bugtracker/yafaray
 
 Thank you.
