--- a/INSTALL
+++ b/INSTALL
@@ -1,4 +1,4 @@
-To install YafaRay v3 into Blender v2.7x:
+To install YafaRay v3 into Blender v2.82:
 
 ** IMPORTANT **
 ----------------------------------------------
@@ -15,32 +15,30 @@ YafaRay v3 has only limited support for multiple YafaRay versions and forks inst
 If you have any of these problems, remove any other yafaray folders (or derived forks) from the Blender addons folder and try again. This typically solves most of the problems stated above.
 
 In v3, support has been DROPPED for Windows XP and MacOSX v10.6
+In Blender v2.82, support has been DROPPED for 32bit operating systems
 
 * Important note *: Now by default YafaRay will save the images at the same time as rendering into Blender ("Secondary File Output"). This can be disabled.
 
 Also, YafaRay, by default, ** will change the output folder/file name ** so the images are exported to a subfolder with the same name as the .blend file with suffix _render. This is for convenience and can be disabled, but if you leave the default it could cause you confusion especially when switching to other renderers.
 ----------------------------------------------
 
-Don't use the Blender from the distro repositories. Download the Blender official 2.79 builds from:
-https://www.blender.org/download/releases/2-79/
+Don't use the Blender from the distro repositories. Download the Blender official builds from:
+https://www.blender.org/download/
 
 Once Blender is installed, locate the folder where it was installed. The paths given below are just examples, but they will probably be different in your system.
 
 Copy this entire folder "yafaray_v3" to (for example):
-  - in Linux 64bit, for example: "$HOME/blender-2.79b-linux-glibc219-x86_64/2.79/scripts/addons" folder.
-  - in Windows 64bit, for example: "C:\Program Files\Blender Foundation\Blender\2.79\scripts\addons" folder.
+  - in Linux 64bit, for example: "$HOME/blender-2.82a-linux64/2.82/scripts/addons" folder.
+  - in Windows 64bit, for example: "C:\Program Files\Blender Foundation\Blender\2.82\scripts\addons" folder.
 
-After it, start Blender, go to User Preferences, AddOns and try to enable Render:"YafaRay-v3". Once (hopefully) enabled you should see it in the list of renderers.
+After it, start Blender, go to Preferences, AddOns and try to enable Render:"YafaRay-v3". Once (hopefully) enabled you should see it in the list of renderers.
 
-(Optional) In the User Preferences, AddOns, YafaRay-v3: select the YafaRay Computer Node number. If you have several computers and you want to render an image or animation using several computers (render farm), just select a different Computer Node number for each PC. This will allow the internal ImageFilm files to use different samples in the different computers, so later they can be combined into a combined render combining the ImageFilm files from each PC ("offline" multicomputer rendering)
-
-* Important: the YafaRay Linux 32bit build requires a processor with SSE/SSE2 instructions. Any non-ancient processor should have them...
+(Optional) In the Preferences, AddOns, YafaRay-v3: select the YafaRay Computer Node number. If you have several computers and you want to render an image or animation using several computers (render farm), just select a different Computer Node number for each PC. This will allow the internal ImageFilm files to use different samples in the different computers, so later they can be combined into a combined render combining the ImageFilm files from each PC ("offline" multicomputer rendering)
 
 If you have any issues:
 
 * Check that you have copied the "yafaray_v3" folder into the correct Blender addons folder.
-* Check that you have downloaded the appropiate YafaRay build for your Operating System and Blender build (32/64 bit)
+* Check that you have downloaded the appropiate YafaRay build for your Operating System
 * Check that you are using the official Blender build from www.blender.org and it's a version supported by YafaRay (see CHANGELOG)
 * In extreme cases (black renders, crashes, etc) remove all older YafaRay versions and other YafaRay derived forks, and try again.
-* If you still have problems, please post your bug reports and feature requests in the "Issues" tab of the corresponding GitHub Project
-NOTE: The old bugtracker in www.yafaray.org will *no longer* be used for bug tracking / feature requests.
+* If you still have problems, please post a bug report in https://github.com/YafaRay/Blender28-Exporter/issues
