--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,6 +6,12 @@ This is an abbreviated list of changes. The full/detailed list of changes can be
 * YafaRay Core code: https://github.com/YafaRay/Core/commits/master
 * Blender Exporter (for Blender v2.7x): https://github.com/YafaRay/Blender-Exporter/commits/master
 
+
+YafaRay (devel) (2020-05-04) for Blender 2.79:
+---------------------------------------------
+* Added Equirectangular camera.  `[Blender Exporter + Core]`
+
+
 YafaRay v3.4.1a (2020-04-09) for Blender 2.79:
 ---------------------------------------------
 * A few documentation changes to clarify bug reporting and Blender v2.79 release download `[Blender Exporter]`
