--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,7 +7,7 @@ This is an abbreviated list of changes. The full/detailed list of changes can be
 * Blender Exporter (for Blender v2.7x): https://github.com/YafaRay/Blender-Exporter/commits/master
 
 
-YafaRay (devel) (2020-05-04) for Blender 2.79:
+YafaRay v3.4.2 (2020-05-04) for Blender 2.79:
 ---------------------------------------------
 * Added Equirectangular camera.  `[Blender Exporter + Core]`
 
